HAN: Fix: shop order payment system 수정